# fod_datasets

./: README.md  download.sh
cisar21/: README.md  cisar21_OS0_calibration.json  download.sh
cisar22/: download.sh
cnn_training/: README.md  download.sh
label_extraction/: CMakeLists.txt  package.xml
label_extraction/config/: Visualization.cfg
label_extraction/launch/: extract_labels.launch  visualize_labels.launch
label_extraction/msg/: Label.msg  Labels.msg
label_extraction/scripts/: extract_labels.py  visualize_labels.py
usmocku21/: download.sh
