<?xml version="1.0"?>
<package format="2">
  <name>label_extraction</name>
  <version>1.0.0</version>
  <description>Package for extraction of labels using detection from the Flying Object Detector</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>message_generation</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_runtime</depend>

  <exec_depend>lidar_tracker</exec_depend>

</package>
